--- a/ACM Chapter App Website/index.html
+++ b/ACM Chapter App Website/index.html
@@ -308,14 +308,14 @@
 		<!-- CONTACT INFO -->
 		<div class="span4" id="contact-info">
 			<h3>Contact Us</h3>
-			<p>FlexApp is free and thus unfortunately we cannot provide basic support for it. We simply don't have the time to answer everyone's questions.</p>
-			<p>However, you may contact us about general business inquiries or to report bugs in the template!<p>
-			<p><a href="mailto:support@yourapp.com" style="color: #F1DD20;">support@yourapp.com</a></p>
+			<p>Our student organization is always at work developing new apps for modern platforms</p>
+			<p>However, you may contact us about general business inquiries or to report bugs in some of our apps!<p>
+			<p><a href="mailto:ACM@kennesaw.edu" style="color: #F1DD20;">ACM@kennesaw.edu</a></p>
 		</div>
 		
 		<!-- CONTACT FORM -->
 		<div class="span7" id="contact-form">
-			<form class="form-horizontal" action="MAILTO:jwhit144@students.kennesaw.edu">
+			<form class="form-horizontal" action="MAILTO:ACM@kennesaw.edu">
 				<fieldset>
 					<div class="control-group">
 						<label class="control-label" for="name" style="color: #ECECEC;">Name</label>
