--- a/ACM Chapter App Website/index.html
+++ b/ACM Chapter App Website/index.html
@@ -144,26 +144,9 @@
 			</h2>
 			
 			<!-- UPDATES & RELEASE NOTES -->
-			
-			<h3 class="version">Version 1.2</h3>
-			<span class="release-date">Released on April 28th, 2012</span>
-			<ul>
-				<li><span class="label new">NEW</span>Challenge a Friend</li>
-				<li><span class="label fix">FIX</span>Fixed 'Resume Game' Bug</li>
-			</ul>
-			<hr>
-			
-			<h3 class="version">Version 1.1</h3>
-			<span class="release-date">Released on January 28th, 2012</span>
-			<ul>
-				<li><span class="label new">NEW</span>Facebook & Twitter Integration</li>
-				<li><span class="label fix">FIX</span>Various Bug Fixes</li>
-				<li><span class="label new">NEW</span>Graphics for Retina Display</li>
-			</ul>
-			<hr>
 		
 			<h3 class="version">Version 1.0</h3>
-			<span class="release-date">Released on January 10th, 2012</span>
+			<span class="release-date">Released on April 4, 2014</span>
 			<ul>
 				<li><span class="label label-info">NEW</span>Initial Release</li>
 			</ul>
@@ -204,9 +187,9 @@
         
         <!-- FEATURES -->
 			<ul id="features">
-				<li>Fully Responsive HTML/CSS3 Template</li>
-				<li>Built on Bootstrap by Twitter</li>
-				<li>Images and Photoshop Files Included</li>
+				<li>Full fledged menu for all Commons venues</li>
+				<li>Detailed nutritional information for each food item</li>
+				<li>Images of each dish included</li>
 				<li>Completely Free!</li>
 			</ul>
 		
